chore: configure github actions deploy to squarecloud
